Wednesday, January 9, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added BoundingBox(), BoundingSphere() functions for a
	  container of points. The BoundingSphere() function
	  uses the (GPL'd) miniball code of Bernd Gaertner
	  <http://www.inf.ethz.ch/personal/gaertner>
	* Moved the implementations of operator<<() and operator>>()
	  for Polygon<2> out of stream.h and into stream.cpp, fixing
	  a linker error for any file which included stream.h (oops).

Wednesday, January 9, 2002	Ron Steinke <rsteinke@w-link.net>

	* Started on Polygon<> class
	* Wrote some test functions for the generic
	  part of the class interface (operator=(), isEqualTo(), etc.)
	  and the generic shape interface (getCorner(), boundingBox(), etc.)
	* Added Midpoint() function in point.h
	* Cleaned up operator<() to check !IsFloatEqual()
	  when comparing variables of type CoordType
	* Added autogen.sh

Friday, January 4, 2002		Ron Steinke <rsteinke@w-link.net>

	* Got atlas_test working

Thursday, January 3, 2002	Ron Steinke <rsteinke@w-link.net>

	* Changed Barycenter() to take a container of Point<>
	  instead of an array, added BoundingBox() for a
	  container of AxisBox<>
	* Optimized special cases in AxisBox::getCorner() and
	  RotBox::getCorner(), got rid of AxisBox::lowCorner()
	  and AxisBox::highCorner()
	* Extended RotMatrix<> to allow for mirror image flips
	  in addition to rotations, added mirror() functions to
	  both RotMatrix<> and Vector<>
	* Removed foolish const from return value of
	  RotMatrix<>::rotation()
	* Wrote better member accessors for most shapes (there's
	  no reason not to have direct access to the members in
	  anything but AxisBox<>)
	* Inlined some of the simpler class member functions
	* Moved atlasconv.h from atlas/ into wfmath/, since we don't
	  need Atlas to install it, just to build the test code

Monday, December 31, 2001	Ron Steinke <rsteinke@w-link.net>

	* Added boundingSphere(), boundingSphereSloppy() to all
	  the shapes