@@ -1,8 +1,8 @@
 Shapes left to do:
-	Triangle<> (in preparation for polygon, 2D triangle embedded in n-dim space)
 	Polygon<>
 	Simplex<> (triangle in 2D, tetrahedron in 3D, etc.)
 Write an API reference for the library. Find some inline documentation tool?
+Portability questions and miniball_config.h
 Deal with difficulties in making certain functions friends of the
 	appropriate classes
 Rearrange the functions in foo_funcs.h to match the order in the class
